<resources>
    <string name="common_name">平安电车</string>

    <string name="common_back">返回</string>
    <string name="common_text_cancle">取消</string>
    <string name="common_text_confirm">确定</string>
    <string name="common_text_ask">确认</string>
    <string name="common_text_save">保存</string>
    <string name="common_next">下一步</string>
    <string name="common_choose_company">请选择公安局</string>
    <string name="common_account">账号</string>
    <string name="common_password">密码</string>
    <string name="common_forget_password">忘记密码</string>
    <string name="common_login">登录</string>
    <string name="common_search">搜索</string>
    <string name="common_search_content">搜索内容</string>
    <string name="common_police">公安局\t\t</string>
    <string name="common_phone">手机号码</string>
    <string name="common_hint_phone">请输入手机号码</string>
    <string name="common_new_password">新密码\t\t</string>
    <string name="common_hint_password">请输入至少6位数字及字母组合</string>
    <string name="common_confirm_password">确认密码</string>
    <string name="common_hint_new_password">请输入您的新密码</string>
    <string name="common_verify_code">验证码\t\t</string>
    <string name="common_verify_code3">验证码\t\t\t\t\t\t</string>
    <string name="common_hint_verify_code">请输入短信验证码</string>
    <string name="common_get_verify_code">获取验证码</string>
    <string name="common_tip_search">请输入有效内容</string>

    <string name="common_permissions_title">权限申请</string>
    <string name="common_permissions_desc">请开启必要权限,否则您无法正常使用一些功能</string>
    <string name="common_permissions_camera">请开启访问您的相册及使用相机权限,否则您无法正常使用该功能</string>
    <string name="common_permissions_phone">请开启拨打电话权限,否则您无法正常使用该功能</string>
    <string name="common_permissions_cancle">不同意</string>
    <string name="common_permissions_confirm">前往开启</string>
    <string name="common_logout">退出登录</string>
    <string name="common_change_password">修改密码</string>
    <string name="common_tip">提示</string>
    <string name="common_warm">温馨提示</string>
    <string name="common_no">否</string>
    <string name="common_yes">是</string>
    <string name="common_close">关闭</string>
    <string name="common_buy_now">立即购买</string>
    <string name="common_ignore_content">确定要忽略</string>

    <string name="common_content_nobuy_service">该功能为增值服务，您还未购买该服务哦!</string>



    <string name="common_title_org">请选择组织机构</string>
    <string name="common_title_forget_pwd">重置密码</string>
    <string name="common_title_reset_pwd">修改密码</string>
    <string name="common_title_main">首页</string>
    <string name="common_title_mine">我的</string>
    <string name="common_title_preview">预览大图</string>
    <string name="common_title_user_info">个人资料</string>
    <string name="common_title_account_safety">安全验证</string>
    <string name="common_title_phone_safety">手机号验证</string>
    <string name="common_title_idcard_safety">身份证号验证</string>
    <string name="common_title_ebike_error">车辆异常信息</string>
    <string name="common_title_alarm_record">报警记录</string>
    <string name="common_title_akey_alarm">一键报警</string>
    <string name="common_title_baidu_map">选择位置</string>
    <string name="common_title_my_order">我的保单</string>
    <string name="common_title_pay">支付</string>
    <string name="common_title_the_safe">防盗保障</string>
    <string name="common_title_service_detail">服务详情</string>
    <string name="common_title_safe_info">保障信息</string>
    <string name="common_title_conver_service">便民服务</string>
    <string name="common_title_addval_service">增值服务</string>
    <string name="common_title_addval_detail">服务详情</string>
    <string name="common_title_addval_info">车辆服务信息</string>
    <string name="common_title_my_addval_service">我的增值服务</string>

    <string name="common_title_device_info">设备信息</string>
    <string name="common_title_find_ebike">车辆查找</string>
    <string name="common_title_point_manage">点位管理</string>
    <string name="common_title_ebike_register">车辆登记</string>
    <string name="common_title_owner_info">车主信息</string>
    <string name="common_title_ebike_info">车辆信息</string>
    <string name="common_title_payment_confirm">缴费确认</string>
    <string name="common_title_register_list">登记记录</string>
    <string name="common_title_edit_info">修改信息</string>
    <string name="common_title_alarm_info">报警信息</string>





    <string name="common_car_info">车辆轨迹</string>
    <string name="common_conve_service">便民服务</string>
    <string name="common_call_police">一键报警</string>
    <string name="common_the_safe">防盗保障</string>
    <string name="common_akey_car_no">车牌号\t\t</string>
    <string name="common_akey_name">联系人\t\t</string>

    <string name="common_dot_manage">点位管理</string>
    <string name="common_device_info">设备信息</string>
    <string name="common_car_up">车辆登记</string>
    <string name="common_up_record">登记记录</string>
    <string name="common_find_car">车辆查找</string>
    <string name="common_text_account_safety">为了您的账号安全,需要验证您的身份,请选择以下任意一种方式进行验证。</string>

    <string name="common_text_akey_des">请确认您的爱车丢失后报警，报警完成后，我们将会联系相关的警务人员进行处理。</string>
    <string name="common_text_akey_img">请上传jpg,png格式的图片，内容与车辆有关，不超过三张</string>

    <string name="common_text_area">地域\t\t\t\t</string>

    <string name="common_ebike_no_t3">车牌号\t\t\t\t\t\t</string>
    <string name="common_label_no_t3">标签号\t\t\t\t\t\t</string>
    <string name="common_ebike_name_t2">车主姓名\t\t\t\t</string>
    <string name="common_ebike_phone_t1">车主手机号\t\t</string>
    <string name="common_frame_no_t1">车架号\t\t\t\t\t\t</string>
    <string name="common_motor_t3">电机号\t\t\t\t\t\t</string>
    <string name="common_brand_t2">品牌型号\t\t\t\t</string>
    <string name="common_color_t2">车辆颜色\t\t\t\t</string>
    <string name="common_type_t2">车辆类型\t\t\t\t</string>
    <string name="common_buy_price_t0">购买价格/元\t</string>
    <string name="common_buy_time_t2">购买时间\t\t\t\t</string>
    <string name="common_remark_t4">备注\t\t\t\t\t\t\t\t</string>
    <string name="common_safe_t4">保障服务\t\t\t\t</string>
    <string name="common_range_t4">服务周期\t\t\t\t</string>
    <string name="common_limit_t4">服务额度\t\t\t\t</string>
    <string name="common_addval_t4">增值服务\t\t\t\t</string>
    <string name="common_service_price_t4">服务费用\t\t\t\t</string>

    <string name="common_look_no_t1">识别码\t\t</string>
    <string name="common_address_t2">地址\t\t\t\t</string>
    <string name="common_latlng_t1">经纬度\t\t</string>

    <string name="common_device_t1">设备ID\t\t</string>


</resources>