<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_colorTheme"
    app:contentInsetEnd="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetStart="0dp"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:id="@+id/ll_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tv_left"
                    style="@style/common_style_title_txt"
                    android:visibility="gone"
                    tools:text="@string/common_back" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                style="@style/common_style_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/common_name" />

            <LinearLayout
                android:id="@+id/ll_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_right"
                    style="@style/common_style_title_txt"
                    tools:text="@string/common_name" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_search"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:src="@drawable/ic_search" />

                <net.hyntech.common.widget.view.ClearEditText
                    android:id="@+id/et_input"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/common_search_content"
                    android:textSize="@dimen/common_font_text"
                    android:paddingEnd="10dp"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/ibtn_info"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ebike_info"
                    android:visibility="gone"
                    android:background="@color/common_trans" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius"
                android:text="@string/common_search"
                android:layout_marginEnd="16dp"
                android:textColor="@color/common_color_text"
                android:textSize="@dimen/common_font_text" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>