<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="net.hyntech.common.vm.AccountSafetyViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_default_background">
        <include layout="@layout/include_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:background="@color/common_white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_gray_text"
                    android:textSize="@dimen/common_font_common"
                    android:paddingEnd="20dp"
                    android:text="当前手机号码" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_black"
                    android:textSize="@dimen/common_font_common"
                    tools:text="手机号" />
            </LinearLayout>
            <View
                style="@style/common_style_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:background="@color/common_white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/common_gray_text"
                    android:textSize="@dimen/common_font_common"
                    android:paddingEnd="20dp"
                    android:text="@string/common_verify_code3" />

                <net.hyntech.common.widget.view.ClearEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/common_font_common"
                    android:background="@null"
                    android:hint="请填写验证码" />

                <Button
                    android:id="@+id/btn_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:background="@drawable/selector_common"
                    android:textColor="@color/common_white"
                    android:text="@string/common_get_verify_code"
                    android:textSize="@dimen/common_font_text" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_common"
            android:layout_marginBottom="20dp"
            android:text="@string/common_next"
            android:onClick="@{(v) -> viewModel.onClickNextPhone()}"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_font_common" />
    </LinearLayout>
</layout>